# Smart_Node_Package_Build

./: README.md  install.sh  install_for_dev.sh  install_for_edibot.sh  io-js.tgz  libuv.bin.tgz
Atlas/: Makefile  README.md  package.sh  package_exclude
Atlas/atlas_hook/: config.js  genHtml.js  package.json  patch.sh
Atlas/atlas_hook/html/: client.html  dispGauge.html
Atlas/atlas_nodes/: Makefile  package.json
Atlas/atlas_nodes/addString/: add-strings.html  add-strings.js
Atlas/atlas_nodes/change-sign/: change-sign.html  change-sign.js
Atlas/atlas_nodes/change_type/: change-type.html  change-type.js
Atlas/atlas_nodes/cv/: camera.html  camera.js  faceDetect.html  faceDetect.js  fakeCamera.html  fakeCamera.js  img2Base64.html  img2Base64.js
Atlas/atlas_nodes/edirobot/: motor.html  motor.js  screen.html  screen.js  servoLoop.html  servoLoop.js
Atlas/atlas_nodes/fakeCamera/: fakeCamera.html  fakeCamera.js
Atlas/atlas_nodes/grove/: button.html  button.js  buzzer.html  buzzer.js  buzzerLoop.html  buzzerLoop.js  lcd.html  lcd.js  led.html  led.js  lightSensor.html  lightSensor.js  mic.html  mic.js  relay.html  relay.js  rotary.html  rotary.js  temperature.html  temperature.js  touch.html  touch.js
Atlas/atlas_nodes/indoor/: moisture.html  moisture.js  motion.html  motion.js  rotaryEncoder.html  rotaryEncoder.js  tempHumi.html  tempHumi.js  uvSensor.html  uvSensor.js
Atlas/atlas_nodes/io/: disp.html  disp.js  dispGauge.ejs  iot.html  iot.js
Atlas/atlas_nodes/math/: math-operations.html  math-operations.js
Atlas/atlas_nodes/robot-driving/: driving.html
Atlas/atlas_nodes/robot-motor/: robot-motor.html
Atlas/atlas_nodes/toggle/: toggle.html  toggle.js
Atlas/cpp/cv/: CMakeLists.txt  Makefile  README.md  config_cv.py  cv_atlas.cpp  cv_atlas.h  cv_tool.cpp  cv_tool.h
Atlas/cpp/cv/red/: face_detect.html  face_detect.js  fakeCamera.html  fakeCamera.js
Atlas/cpp/cv/test/: CMakeLists.txt  run.cpp
Atlas/cpp/edirobot/: CMakeLists.txt  LED_16_16.cpp  LED_16_16.h  Makefile  config_edirobot.py  edi_robot.h  motor.cpp.bak  screen.cpp  servo.cpp.bak
Atlas/cpp/grove/: CMakeLists.txt  Makefile  button.cpp  buzzer.cpp  config_grove.py  grove_kit.h  lcd.cpp.bak  led.cpp  lightSensor.cpp  mic.cpp  relay.cpp  rotary.cpp  temperature.cpp  touch.cpp
Atlas/cpp/grove/test/: CMakeLists.txt  run.cpp
Atlas/cpp/indoor/: CMakeLists.txt  Makefile  config_indoor.py  encoder.cpp  indoor_kit.h  moisture.cpp  motion.cpp  temp_humi.cpp  uv_sensor.cpp
Atlas/virtual_node/virtual_button/: virtual_button.js
Atlas/virtual_node/virtual_buzzer/: package.json
Atlas/virtual_node/virtual_lightSensor/: virtual_light.html
Atlas/virtual_node/virtual_motion/: package.json  virtual_motion.js
Atlas/virtual_node/virtual_servo/: package.json  virtual_servo.js
Atlas/virtual_node/virtual_soundSensor/: package.json
Atlas/virtual_node/virtual_temp/: virtual_temp.html  virtual_temp.js
Atlas/virtual_node/virtual_touch/: package.json  virtual_touch.js
io-js/utils/autogen/: autogen.make  config.py  configSys.py  genC.py  genCppClass.py  genJsApi.py  (+7 more)
lib/: SmartNode.tgz  libmraa.so.0.7.5  libmraa0_0.7.3_i586.ipk  libv4l.tgz  mraa_0.8.0_i586.ipk  ojl298.tgz  upm-diy.tgz
lib/mqtt_1.4/: libmosquitto1_1.4.2-r0_core2-32.ipk  libmosquittopp1_1.4.2-r0_core2-32.ipk  libwebsockets-dbg_git-r0_core2-32.ipk.bak  libwebsockets-dev_git-r0_core2-32.ipk  libwebsockets-staticdev_git-r0_core2-32.ipk  libwebsockets-test_git-r0_core2-32.ipk  libwebsockets_git-r0_core2-32.ipk  mosquitto-clients_1.4.2-r0_core2-32.ipk  mosquitto-dbg_1.4.2-r0_core2-32.ipk.bak  mosquitto-dev_1.4.2-r0_core2-32.ipk  mosquitto-doc_1.4.2-r0_core2-32.ipk  mosquitto-staticdev_1.4.2-r0_core2-32.ipk  mosquitto.conf  mosquitto_1.4.2-r0_core2-32.ipk
node-red/: .config.json  .flows_edison.json.backup  atlas_hook  flows_edison.json  package.json  red.js  settings.js
node-red/nodes/: atlas_nodes
node-red/red/: comms.js  i18n.js  log.js  red.js  server.js  settings.js  util.js
pub/: README  install_head.sh  make_rel_pack.sh  package_exclude
robot-driving/: driving.js  package.json
robot-motor/: package.json  robot-motor.js  robot-motor_old.js
(+295 files in other folders)
